--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,15 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
+  <h1>Team Name: <%=@team[:name]%></h1>
+    <p>Coach: <%=@team[:coach]%></p>
+    <p>Point Guard: <%=@team[:pg]%></p>
+    <p>Shooting Guard: <%=@team[:sg]%></p>
+    <p>Power Forward: <%=@team[:pf]%></p>
+    <p>Small Forward: <%=@team[:sf]%></p>
+    <p>Center: <%=@team[:c]%></p>
+
+
 
 
  </body>
