--- a/views/team.erb
+++ b/views/team.erb
@@ -5,9 +5,13 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
-
-
+  <h1>Team Name: <%= @params[:name] %></h1>
+  <h2>Coach: <%= @params[:coach] %></h1>
+  <h2>Point Guard: <%= @params[:pg] %></h1>
+  <h2>Shooting Guard: <%= @params[:sg] %></h1>
+  <h2>Small Forward: <%= @params[:sf] %></h1>
+  <h2>Power Forward: <%= @params[:pf] %></h1>
+  <h2>Center: <%= @params[:c] %></h1>
  </body>
 </html>
 
